--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Relaxo</title>
   </head>
   <body>
+    <div class="app">
+      <div class="time-select"></div>
+      <div class="player-container"></div>
+      <div class="sound-picker"></div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
