--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div class="app">
-      <div class="time-select"></div>
+      <div class="time-select">
+        <button data-time="300">5 Minutes</button>
+        <button data-time="600">10 Minutes</button>
+        <button data-time="1200">20 Minutes</button>
+      </div>
       <div class="player-container"></div>
       <div class="sound-picker"></div>
     </div>
