--- a/index.html
+++ b/index.html
@@ -8,13 +8,69 @@
   </head>
   <body>
     <div class="app">
+      <div class="vid-container">
+        <video loop>
+          <source src="./media/video/rain.mp4" type="video/mp4" />
+        </video>
+      </div>
       <div class="time-select">
         <button data-time="300">5 Minutes</button>
         <button data-time="600">10 Minutes</button>
         <button data-time="1200">20 Minutes</button>
       </div>
-      <div class="player-container"></div>
-      <div class="sound-picker"></div>
+      <div class="player-container">
+        <audio class="track">
+          <source src="./media/sounds/rain.mp3" />
+        </audio>
+        <img src="./media/svg/play.svg" alt="play" class="play" />
+        <svg
+          class="track-outline"
+          width="453"
+          height="453"
+          viewBox="0 0 453 453"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle
+            cx="226.5"
+            cy="226.5"
+            r="216.5"
+            stroke="white"
+            stroke-width="20"
+          />
+        </svg>
+        <svg
+          class="moving-outline"
+          width="453"
+          height="453"
+          viewBox="0 0 453 453"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle
+            cx="226.5"
+            cy="226.5"
+            r="216.5"
+            stroke="#018EBA"
+            stroke-width="20"
+          />
+        </svg>
+        <h3 class="time-display">00:00</h3>
+      </div>
+      <div class="sound-picker">
+        <button
+          data-sound="./media/sounds/rain.mp3"
+          data-video="./media/video/rain.mp4"
+        >
+          <img src="./media/svg/rain.svg" alt="rain icon" />
+        </button>
+        <button
+          data-sound="./media/sounds/beach.mp3"
+          data-video="./media/video/beach.mp4"
+        >
+          <img src="./media/svg/beach.svg" alt="beach icon" />
+        </button>
+      </div>
     </div>
 
     <script src="app.js"></script>
